scrollbar fixes

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -437,8 +437,8 @@ scrollbar.vertical button.up {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;
+	padding-top: 0px;
+	padding-bottom: 0px;
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
@@ -458,8 +458,8 @@ scrollbar.vertical button.up:active {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;	
+	padding-top: 0px;
+	padding-bottom: 0px;	
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
@@ -479,8 +479,8 @@ scrollbar.vertical button.up:disabled {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;	
+	padding-top: 0px;
+	padding-bottom: 0px;	
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
@@ -512,8 +512,8 @@ scrollbar.vertical button.down {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;	
+	padding-top: 0px;
+	padding-bottom: 0px;	
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
@@ -533,8 +533,8 @@ scrollbar.vertical button.down:active {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;	
+	padding-top: 0px;
+	padding-bottom: 0px;	
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
@@ -553,8 +553,8 @@ scrollbar.vertical button.down:disabled {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;	
+	padding-top: 0px;
+	padding-bottom: 0px;	
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
@@ -583,8 +583,8 @@ scrollbar.horizontal button.up {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;	
+	padding-top: 0px;
+	padding-bottom: 0px;	
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
@@ -604,8 +604,8 @@ scrollbar.horizontal button.up:active {
 	padding-left: 0px;
 	padding-right: 0px;
     border-left: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;    
+	padding-top: 0px;
+	padding-bottom: 0px;    
     border-top: 0px;
     border-right: 0px;
     border-bottom: 0px;
@@ -623,8 +623,8 @@ scrollbar.horizontal button.up:disabled {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;	
+	padding-top: 0px;
+	padding-bottom: 0px;	
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
@@ -653,8 +653,8 @@ scrollbar.horizontal button.down {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;	
+	padding-top: 0px;
+	padding-bottom: 0px;	
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
@@ -674,8 +674,8 @@ scrollbar.horizontal button.down:active {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;	
+	padding-top: 0px;
+	padding-bottom: 0px;	
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
@@ -694,8 +694,8 @@ scrollbar.horizontal button.down:disabled {
     min-width: 15px;
 	padding-left: 0px;
 	padding-right: 0px;
-	padding-top: 1px;
-	padding-bottom: 1px;	
+	padding-top: 0px;
+	padding-bottom: 0px;	
     border-left: 0px;
     border-top: 0px;
     border-right: 0px;
